[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "langchain>=1.2.12",
    "langchain-core>=1.2.19",
    "langgraph>=1.1.2",
    "openai>=2.28.0",
    "requests>=2.32.5",
]
